add api platform and api endpoints for mobile application

--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -32,4 +32,4 @@ Search: Search
 'Existing on': 'Existing on'
 'Sync all': 'Sync all'
 Manage aliases: 'Manage my aliases'
-site.title: 'Alias manager'
+site.title: 'Ellias'
