--- a/translations/messages+intl-icu.fr.yml
+++ b/translations/messages+intl-icu.fr.yml
@@ -31,4 +31,4 @@ Search: Rechercher
 'Existing on': 'Existe sur'
 'Sync all': 'Tout synchroniser'
 Manage aliases: 'Gestion de mes alias'
-site.title: "Gestionnaire d'Alias"
+site.title: 'Ellias'
