refacto: update search system

--- a/translations/messages+intl-icu.fr.yml
+++ b/translations/messages+intl-icu.fr.yml
@@ -36,3 +36,4 @@ site.title: 'Ellias'
 Delete this alias: 'Supprimer cet alias'
 for: 'pour'
 Logout: 'Déconnexion'
+Alias added !: 'Alias ajouté !'
