refactor: improve mercure notifications configuration

--- a/translations/messages+intl-icu.fr.yml
+++ b/translations/messages+intl-icu.fr.yml
@@ -35,3 +35,4 @@ Synchronize: 'Synchroniser'
 'Worker has been started': 'Le worker vient de démarrer'
 'Worker has been stopped': 'Le worker vient de s''arrêter'
 'Send your message to worker': 'Envoi du message au worker'
+'existing aliases': 'alias existants'
